#326, #458 cleaned up && refactored settings/keys, re-added removed functionality (key status encrypted/decrypted, decrypt key manually) + keys are now being sorted by username with preserved collapse state to prevent wiggling on keyring update

--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -301,7 +301,9 @@ form.settings{
 			.icon-key-pair{
 				color: @lava;
 			}
-			
+			.icon-key-pair.encrypted{
+				color: @lava-red;
+			}
 		}
 
 		.text-control{
